# OV5647

./: CMakeLists.txt  partitions_singleapp.csv
components/audio_mqtt_sender/: CMakeLists.txt  audio_mqtt_sender.c
components/audio_mqtt_sender/include/: audio_mqtt_sender.h
components/audio_recorder/: CMakeLists.txt  audio_recorder.c
components/audio_recorder/include/: audio_recorder.h
components/babysound_detector/: CMakeLists.txt  babysound_detector.cpp
components/babysound_detector/include/: babysound_detector.h
components/babysound_detector/model/: baby_sound_detector.espdl
components/cam_net/: CMakeLists.txt  cam_net.c
components/cam_net/include/: cam_net.h
components/face_recognition/: CMakeLists.txt  face_recognition.cpp
components/face_recognition/include/: face_recognition.h
components/fall_classifier/: CMakeLists.txt  fall_classifier.cpp
components/fall_classifier/include/: fall_classifier.h
components/fall_detector/: CMakeLists.txt  fall_detector.cpp
components/lcd_display/: CMakeLists.txt  lcd_display.c
components/lvgl_ui/: CMakeLists.txt  lvgl_ui.c
components/mqtt_service/: CMakeLists.txt  mqtt_service.c
components/net_service/: CMakeLists.txt  net_service.c
components/person_detect/: CMakeLists.txt  draw_box.c  person_detect.cpp
components/touch_gt911/: CMakeLists.txt  touch_gt911.c
components/yolo11_pose/: CMakeLists.txt  yolo11_pose_wrapper.cpp
main/: CMakeLists.txt  debug.c  demo.c  env_capture_main.c  face_demo.c  idf_component.yml  lvgl+fall+soundrecord.c  main.c  only_babysound.c  send_demo.c
(+11 files in other folders)
